# Vocalendar

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package.json  render.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/app/: __init__.py  crypto.py  db.py  main.py  oauth_state.py  settings.py  tokens.py
apps/api/app/assistant/: __init__.py  commands.py
apps/api/app/calendar/: __init__.py  google.py  service.py
apps/api/app/models/: __init__.py  calendar_connection.py  event.py  user.py
apps/api/app/routes/: __init__.py  assistant.py  auth.py  events.py  integrations.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 2026053001_create_users.py  2026053002_create_events.py  2026053101_add_google_calendar_connections.py
apps/api/tests/: test_add_command_parser.py  test_assistant_command_api.py  test_current_user_api.py  test_delete_command_parser.py  test_event_create_api.py  test_event_delete_api.py  test_event_list_api.py  test_event_model.py  test_github_oauth_callback_api.py  test_github_oauth_start_api.py  test_google_integration_api.py  test_guest_session_api.py  test_health.py  test_list_command_parser.py  test_settings.py  test_user_model.py
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.css  App.test.tsx  App.tsx  index.css  types.ts
apps/web/src/components/: CalendarDrawer.tsx  Login.tsx  MainHub.tsx  (+1 more)
skills/pr-submission-guidelines/: SKILL.md
skills/pr-submission-guidelines/agents/: openai.yaml
(+4 files in other folders)
